修正了原型图中的一些错误

--- a/原型图/进货管理.html
+++ b/原型图/进货管理.html
@@ -304,7 +304,7 @@
       <div id="u2510" class="ax_default el-button-primary">
         <div id="u2510_div" class=""></div>
         <div id="u2510_text" class="text ">
-          <p><span>增加库存</span></p>
+          <p><span>进货</span></p>
         </div>
       </div>
 
