--- a/原型图/退货管理.html
+++ b/原型图/退货管理.html
@@ -264,7 +264,7 @@
       <div id="u2651" class="ax_default el-button-primary">
         <div id="u2651_div" class=""></div>
         <div id="u2651_text" class="text ">
-          <p><span>增加库存</span></p>
+          <p><span>退货</span></p>
         </div>
       </div>
 
